password reset implemented with toast notifications

--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/ng-snotify/styles/material.css",
               "src/styles.scss"
             ],
             "scripts": []
